Adiciona introdução completa na página principal

--- a/index.html
+++ b/index.html
@@ -132,19 +132,52 @@
                 <h1>Bem-vindo ao Cyber Knowledge Hub</h1>
                 <p class="hero-subtitle">Seu centro de conhecimento completo em segurança cibernética</p>
                 
+                <!-- Introduction Section -->
+                <div class="intro-section">
+                    <div class="intro-card">
+                        <h2><i class="fas fa-shield-alt"></i> O que é o Cyber Knowledge Hub?</h2>
+                        <p>Uma cartilha digital colaborativa que reúne conhecimento essencial em segurança cibernética. Desenvolvido como projeto acadêmico, nosso objetivo é democratizar o acesso a informações técnicas de qualidade, oferecendo conteúdo desde conceitos fundamentais até técnicas avançadas de cybersecurity.</p>
+                    </div>
+
+                    <div class="features-grid">
+                        <div class="feature-card">
+                            <i class="fas fa-graduation-cap"></i>
+                            <h3>Conteúdo Educativo</h3>
+                            <p>Artigos técnicos com linguagem clara e acessível para estudantes e profissionais de TI</p>
+                        </div>
+                        <div class="feature-card">
+                            <i class="fas fa-users"></i>
+                            <h3>Colaborativo</h3>
+                            <p>Desenvolvido pela comunidade, com revisões de especialistas e contribuições abertas</p>
+                        </div>
+                        <div class="feature-card">
+                            <i class="fas fa-tools"></i>
+                            <h3>Prático</h3>
+                            <p>Ferramentas, metodologias e boas práticas aplicáveis no dia a dia profissional</p>
+                        </div>
+                        <div class="feature-card">
+                            <i class="fas fa-mobile-alt"></i>
+                            <h3>Acessível</h3>
+                            <p>Interface responsiva e otimizada para todos os dispositivos e necessidades</p>
+                        </div>
+                    </div>
+
+
+                </div>
+                
                 <div class="stats-grid">
-                    <!--<div class="stat-card">-->
-                    <!--    <i class="fas fa-book-open"></i>-->
-                    <!--    <h3>Artigos</h3>-->
-                    <!--    <p class="stat-number">0</p>-->
-                    <!--    <p class="stat-label">Em breve</p>-->
-                    <!--</div>-->
-                    <!--<div class="stat-card">-->
-                    <!--    <i class="fas fa-tools"></i>-->
-                    <!--    <h3>Ferramentas</h3>-->
-                    <!--    <p class="stat-number">0</p>-->
-                    <!--    <p class="stat-label">Em breve</p>-->
-                    <!--</div>-->
+                    <div class="stat-card">
+                        <i class="fas fa-book-open"></i>
+                        <h3>Artigos</h3>
+                        <p class="stat-number">15+</p>
+                        <p class="stat-label">Conteúdos técnicos</p>
+                    </div>
+                    <div class="stat-card">
+                        <i class="fas fa-tools"></i>
+                        <h3>Ferramentas</h3>
+                        <p class="stat-number">10+</p>
+                        <p class="stat-label">Guias práticos</p>
+                    </div>
                     <div class="stat-card">
                         <i class="fas fa-users"></i>
                         <h3>Colaboradores</h3>
